added editability and implemented user permissions for parent profile page views

--- a/static/styles2.css
+++ b/static/styles2.css
@@ -117,3 +117,11 @@ container {
 #login_table .tr {
 	font-weight: normal;
 }
+
+table {
+	border-color: red;
+}
+
+/*a .editable {
+	color: black;
+}*/
