--- a/templates/sign-up-parent.html
+++ b/templates/sign-up-parent.html
@@ -46,7 +46,8 @@
 				<td>Give us some background about yourself:</td>
 				<td><textarea name="background" rows="5" cols="50"></textarea></td>
 			<tr>
-				<td>Describe your ideal doula. Any specific services you're looking for? Experience level?</td>
+				<td>Describe your ideal doula. 
+					<br>Any specific services you're looking for? Experience level?</td>
 				<td><textarea name="ideal_nar" rows="5" cols="50"></textarea></td>
 
 			<tr>
@@ -66,6 +67,7 @@
 
 		</form>
 	</table>
+</div>
 
 
 {% endblock %}
