--- a/templates/logged-in-base.html
+++ b/templates/logged-in-base.html
@@ -4,7 +4,7 @@
 
 {% block navbar %}
 
-
+	<li><a href="/search">Find a Doula</a></li>
 	<li><a href="/logout">Logout</a></li>
 	<li><a href="">Settings</a></li>
 
