--- a/templates/logged-out-base.html
+++ b/templates/logged-out-base.html
@@ -3,6 +3,7 @@
 
 
 {% block navbar %}
+	<li><a href="/search">Find a Doula</a></li>
     <li><a href="/">Sign Up!</a></li>
     <li><a href="/login">Login</a></li>
 
