geocode api is transforming zipcodes to long/lat, new columns to hold that info in database, which means db got cleared. Next up: learn how to search for a radius around that zipcode

--- a/templates/user-profile.html
+++ b/templates/user-profile.html
@@ -4,6 +4,9 @@
 {% block body %}
 
 <div class="container">
+  <div id="editability">
+    <button id="enable" class="btn btn-default">edit profile</button>
+  </div>
   <div class="row">
       <div class="col-md-4 col-sm-5" id="profile-column-left">
         <div id="parent-profile-pic"> <img width="150" src="/static/images/uploads/parent_{{ parent.id }}.jpg"> 
@@ -82,7 +85,10 @@
       $(document).ready(function() {
       
         //assume server response: 200 Ok {status: 'error', msg: 'field cannot be empty!'}
-        $('.editable').editable();
+        $('#enable').click(function() {
+          $('.editable').editable('toggleDisabled');
+
+        })
       });
     </script>
 {% endblock %}
