writing tests in test.py, finished writing functions for api_helpers.py

--- a/templates/search.html
+++ b/templates/search.html
@@ -8,10 +8,9 @@
 		 
 		<p>Find all doulas within
 				<select name="zip_radius">
-					<option value="5mi">5</option>
-					<option value="10mi">10</option>
-					<option value="25mi">25</option>
-					<option value="50mi">50</option>
+					<option value="5">5</option>
+					<option value="10">10</option>
+					<option value="25">25</option>
 				</select>
 				miles of zipcode
 				<input type="search" name="doula_zip_search" placeholder="zipcode">
