--- a/templates/sign-up-doula.html
+++ b/templates/sign-up-doula.html
@@ -44,7 +44,7 @@
 				</td>
 			<tr>
 				<td>Give us some background about yourself:</td>
-				<td><textarea name="background" rows="5" cols="50"></textarea></td>
+				<td><textarea name="background_nar" rows="5" cols="50"></textarea></td>
 			<tr>
 				<td>What services do you provide?</td>
 				<td><textarea name="services" rows="5" cols="50"></textarea></td>
