end of day Tuesday, working on databse queries, got test set-up to work

--- a/templates/bootstrap-base.html
+++ b/templates/bootstrap-base.html
@@ -72,7 +72,7 @@
 
     <div class="container">
       <div class="banner">
-        <img src="/static/images/doulahoop_header.jpg">
+        <img src="/static/images/hulahoop_banner.png">
       </div>
       <!-- ADD IN SPOT FOR FLASH MESSAGES HERE -->
       {% with messages = get_flashed_messages() %}
