--- a/templates/login.html
+++ b/templates/login.html
@@ -11,7 +11,7 @@
 			<tr>
 				<td>What type of DoulaHooper are you?</td>
 				<td>
-					<input type="radio" name="role" value="doula"> Doula
+					<input type="radio" name="role" value="doula" checked="checked"> Doula
 					<input type="radio" name="role" value="parent"> Parent
 				</td>
 			<tr>
