--- a/templates/sign-up-doula.html
+++ b/templates/sign-up-doula.html
@@ -35,7 +35,7 @@
 				<td><input type="tel" name="phone"></td>
 			<tr>
 				<td>Website:</td>
-				<td><input type="text" name="website"></td>
+				<td><input type="text" name="website" value="http://www."></td>
 			<tr>
 				<td>Price range:</td>
 				<td>
@@ -50,7 +50,7 @@
 				<td><textarea name="services" rows="5" cols="50"></textarea></td>
 			<tr>
 				<td>Zipcode:</td>
-				<td><input type="text" name="zip"><</td>
+				<td><input type="text" name="zip"></td>
 			<tr>
 				<td>Upload a profile picture</td>
 				<td><input type="file" name="image" accept="image/*"></td>
