--- a/templates/search.html
+++ b/templates/search.html
@@ -14,14 +14,13 @@
 				</select>
 				miles of zipcode
 				<input type="search" name="doula_zip_search" placeholder="zipcode">
-				<input type="submit" value="Search">
+				<input class="btn btn-default" type="submit" value="Search">
 		</p>
 	</form>
 
-
-	<p>Or,
+	<p>
 	<form id="search-all" action="/list_all" method="post">
-		<input type="submit" value="list all doulas">
+		Or, <input class="btn btn-default" type="submit" value="list all doulas">
 	</form>
 	</p>
 {% endblock %}
