--- a/templates/index.html
+++ b/templates/index.html
@@ -2,32 +2,31 @@
 
 {% block body %}
 
-<div id="index-top-box">
-  <div>
-  	<h2>How will you be using this website?</h2>
+<div class="row">
+  <div class="col-xs-12 text-center">
+  	<h2 class="subtitle">How will you be using this website?</h2>
   </div>
 </div>  
 
-<div class="container">
-	<div class="row" id="index-bottom-box">
-		<div class="col-md-6" id="bottom-box-left">
+	<div class="row">
+		<div class="col-md-6">
 	  		<a href="/signup_parent">
-	  		<div class="jumbotron">
+	  		<div class="jumbotron box">
 	  			<h3>I'm a parent</h1>
 	  			<p>I'm looking for a doula</p>
 			</div>
 			</a>
 		</div>
-		<div class="col-md-6" id="bottom-box-right">
+		<div class="col-md-6">
 			<a href="/signup_doula">
-			<div class="jumbotron">
+			<div class="jumbotron box">
 				<h3>I'm a doula</h3>
 				<p>I'm looking for clients</p>
 			</div>
 			</a>
 		</div>
 	</div>  
-</div>
+
 
 
 
